[package]
name = "trip-analyzer"
version = "0.1.0"
authors = ["Taketomo Ohishi <takeweb@mac.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.33.3"
csv = "1.1.5"
hdrhistogram = "6.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.62"
